--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "babel-cli": "latest",
         "babel-preset-es2015": "latest",
         "fs": "0.0.1-security",
-        "tape": "latest"
+        "tape": "latest",
+        "js-prototypes": "latest"
     }
 }
